<resources>
    <string name="app_name">MyCon</string>


    <!-- MENU -->
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_about">About</string>
    <string name="action_record">Record</string>

    <!-- WIFI -->
    <string name="wifi_ssid">SSID</string>
    <string name="wifi_netmask">Netmask</string>
    <string name="wifi_bssid">BSSID</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_rssi">RSSI</string>
    <string name="wifi_frequency">Frequency</string>
    <string name="wifi_linkSpeed">Link Speed</string>
    <string name="wifi_networkId">Network ID</string>
    <string name="wifi_serverAddress">Server Address</string>
    <string name="wifi_networkDns1">DNS 1</string>
    <string name="wifi_networkDns2">DNS 2</string>
    <string name="wifi_lastupdate">Last update</string>

    <string name="device_name">Name</string>
    <string name="device_brand">Brand</string>
    <string name="device_ip">Ip</string>
    <string name="device_mac">MAC</string>
    <string name="device_ip_ex">123.456.789</string>
    <string name="device_mac_ex">A1:B2:C3:D4:E5:F6:G7:H8</string>


    <string name="wifi_update_message">Update</string>


    <!-- DIALOGS -->
    <string name="dialog_update_title">Update</string>
    <string name="dialog_update_message">Update connected devices</string>


    <!-- ABOUT -->
    <string name="about_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis fermentum id mi fermentum laoreet. Mauris eu purus vel mi elementum elementum ac vel ipsum. Nulla quis rutrum tellus.</string>
    <string name="about_social">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="about_paypal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>


    <!-- GENERIC -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Image description</string>


</resources>
