<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.algalopez.mycon.wifi.presentation.WifiActivity">


    <item
        android:id="@+id/action_update"
        android:icon="@mipmap/ic_refresh_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_about"
        android:orderInCategory="205"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="205"
        android:title="@string/action_settings"
        app:showAsAction="never" />




</menu>
