<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.algalopez.mycon.wifi.presentation.detailwifi.DetailWifiFragment"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/fragment_margin"
    android:layout_marginBottom="@dimen/fragment_margin"
    android:layout_marginStart="@dimen/fragment_margin"
    android:layout_marginEnd="@dimen/fragment_margin">


    <!-- SSID -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_ssid_tv"
        android:text="@string/wifi_ssid"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_ssid_res_tv"
        android:text="@string/wifi_ssid"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- PASSWORD -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_password_tv"
        android:text="@string/wifi_password"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_password_res_tv"
        android:text="@string/wifi_password"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- NETMASK -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_netmask_tv"
        android:text="@string/wifi_netmask"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_netmask_res_tv"
        android:text="@string/wifi_netmask"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- BSSID -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_bssid_tv"
        android:text="@string/wifi_bssid"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_bssid_res_tv"
        android:text="@string/wifi_bssid"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- RSSI -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_rssi_tv"
        android:text="@string/wifi_rssi"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_rssi_res_tv"
        android:text="@string/wifi_rssi"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- FREQUENCY -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_frequency_tv"
        android:text="@string/wifi_frequency"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_frequency_res_tv"
        android:text="@string/wifi_frequency"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- LINK SPEED -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_linkspeed_tv"
        android:text="@string/wifi_linkSpeed"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_linkspeed_res_tv"
        android:text="@string/wifi_linkSpeed"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- NETWORK ID -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_networkid_tv"
        android:text="@string/wifi_networkId"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_networkid_res_tv"
        android:text="@string/wifi_networkId"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- SERVER ADDRESS -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_serveraddress_tv"
        android:text="@string/wifi_serverAddress"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_serveraddress_res_tv"
        android:text="@string/wifi_serverAddress"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- NETWORK DNS 1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_networkdns1_tv"
        android:text="@string/wifi_networkDns1"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_networkdns1_res_tv"
        android:text="@string/wifi_networkDns1"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_space" />

    <!-- NETWORK DNS 2 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_networkdns2_tv"
        android:text="@string/wifi_networkDns2"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_line_height"
        android:id="@+id/detail_wifi_networkdns2_res_tv"
        android:text="@string/wifi_networkDns2"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/detail_line_indentation"/>



</LinearLayout>
</ScrollView>