<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context="com.algalopez.mycon.about.AboutFragment"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/about_foto_iv"
                android:layout_width="140dp"
                android:layout_height="143dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_description"
                android:src="@drawable/algalopez_rounded" />


            <TextView
                android:id="@+id/about_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_description"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/about_social_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_social" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/about_social_github_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    app:srcCompat="@drawable/iconmonstr_github_3_240"
                    android:contentDescription="@string/image_description"/>

                <ImageButton
                    android:id="@+id/about_social_twitter_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    app:srcCompat="@drawable/iconmonstr_twitter_3_240"
                    android:contentDescription="@string/image_description"/>

                <ImageButton
                    android:id="@+id/about_social_linkedin_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    app:srcCompat="@drawable/iconmonstr_linkedin_3_240"
                    android:contentDescription="@string/image_description"/>



            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/about_payment_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/about_paypal" />

    </LinearLayout>



</ScrollView>



